<resources>
    <string name="app_name">Graduation Project</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Enter</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Remeberme">Remeberme</string>
    <string name="showpass">show password</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="firstName">first Name</string>
    <string name="LastName">last Name</string>
    <string name="confPass">repeat Password</string>
    <string name="Phone">Phone</string>


    <string name="slide_1_title">Diabetes dialy life</string>
    <string name="slide_1_desc">Manage your daily diabetes life</string>
    <string name="slide_2_title">Meditation Techniques </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
